<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@color/colorTextShadow"
    android:label="@string/Moscow"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:adjustViewBounds="true"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:cropToPadding="true"

        android:scaleType="fitStart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/sunny" />

    <TextView
        android:id="@+id/textView3"
        style="@style/MyTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="16dp"
        android:text="@string/Temperature"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView2"
        style="@style/MyTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/Moscow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView" />


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="@dimen/layout_width"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <TextView
            android:id="@+id/textView4"
            style="@style/RegularText"
            android:text="@string/Day01"/>

        <ImageView

            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            app:srcCompat="@mipmap/ico_sun" />

        <TextView
            android:id="@+id/textView5"
            style="@style/RegularText"
            android:text="@string/Temp01"
            android:textSize="30dp"
           />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>